[tool.poetry]
name = "topf"
version = "0.1.0"
description = "Topological peak finding"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
